--- a/hotelPunnu/nbproject/project.properties
+++ b/hotelPunnu/nbproject/project.properties
@@ -33,7 +33,7 @@ file.reference.itext-5.0.5.jar=D:\\Mr.Nishant Important do not delete it\\itext-
 file.reference.jcalendar-1.4.jar=D:\\Mr.Nishant Important do not delete it\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.45-bin.jar=C:\\Program Files\\Java\\jre1.8.0_151\\lib\\ext\\mysql-connector-java-5.1.45-bin.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
